--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
     <body ng-controller="MainCtrl">
     
         <div class="page-header">
-            <h1 class="text-center">DJayy</h1>
+            <h1 class="text-center"><span class="glyphicon glyphicon-music"></span> DJayy</h1>
         </div>
 
         <div class="container">
@@ -35,7 +35,20 @@
             <h3>Play Queue</h3>
 
             <ul class="list-group">
-                <li ng-repeat="track in tracks" class="list-group-item">{{track.title}} - {{track.artist}}</li>
+                <li ng-repeat="track in tracks" class="list-group-item">
+                    <div class="row">
+                        <div class="col-md-6">{{track.title}} - {{track.artist}}</div>
+                        <div class="col-md-6">
+                            <span class="pull-right">
+                            <div class="btn-group btn-group-xs">
+                                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-menu-up"></span></button>
+                                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-menu-down"></span></button>
+                            </div>
+                            {{track.votes}}
+                            </span>
+                        </div>
+                    </div>
+                </li>
             </ul>
 
     </body>
