--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     <!-- Angular Route -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-route.min.js"></script>
 
-    <!-- Our JS -->
+    <!-- App JS -->
     <script src="app.js"></script>
 
     </head>
@@ -41,8 +41,10 @@
                         <div class="col-md-6">
                             <span class="pull-right">
                             <div class="btn-group btn-group-xs">
-                                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-menu-up"></span></button>
-                                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-menu-down"></span></button>
+                                <button ng-click="trackVote(track.id, 1)" type="button" class="btn btn-default">
+                                    <span class="glyphicon glyphicon-menu-up"></span></button>
+                                <button ng-click="trackVote(track.id, -1)" type="button" class="btn btn-default">
+                                    <span class="glyphicon glyphicon-menu-down"></span></button>
                             </div>
                             {{track.votes}}
                             </span>
