--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,9 @@
     <!-- Angular Route -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-route.min.js"></script>
 
+    <!-- Angular Cookies -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-cookies.min.js"></script>
+
     <!-- App JS -->
     <script src="app.js"></script>
 
@@ -40,10 +43,10 @@
                         <div class="col-md-6">{{track.title}} - {{track.artist}}</div>
                         <div class="col-md-6">
                             <span class="pull-right">
-                            <div class="btn-group btn-group-xs">
-                                <button ng-click="trackVote(track.id, 1)" type="button" class="btn btn-default">
+                            <div class="btn-group btn-group-xs" data-toggle="buttons">
+                                <button ng-click="trackVote($event, track.q_id, 1)" type="button" class="btn btn-default">
                                     <span class="glyphicon glyphicon-menu-up"></span></button>
-                                <button ng-click="trackVote(track.id, -1)" type="button" class="btn btn-default">
+                                <button ng-click="trackVote($event, track.q_id, -1)" type="button" class="btn btn-default">
                                     <span class="glyphicon glyphicon-menu-down"></span></button>
                             </div>
                             {{track.votes}}
