--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
             <h3>Play Queue</h3>
 
             <ul class="list-group">
-                <li ng-repeat="track in tracks" class="list-group-item">
+                <li ng-repeat="track in queue" class="list-group-item">
                     <div class="row">
                         <div class="col-md-6">{{track.title}} - {{track.artist}}</div>
                         <div class="col-md-6">
