--- a/web/index.html
+++ b/web/index.html
@@ -44,9 +44,9 @@
                         <div class="col-md-6">
                             <span class="pull-right">
                             <div class="btn-group btn-group-xs" data-toggle="buttons">
-                                <button id="up" ng-click="server_trackVote($event, track.queue_id, '1')" type="button" class="btn btn-default">
+                                <button id="up" ng-click="server_trackVote($event, track.queue_id, 1)" type="button" class="btn btn-default">
                                     <span class="glyphicon glyphicon-menu-up"></span></button>
-                                <button id="down" ng-click="server_trackVote($event, track.queue_id, '-1')" type="button" class="btn btn-default">
+                                <button id="down" ng-click="server_trackVote($event, track.queue_id, -1)" type="button" class="btn btn-default">
                                     <span class="glyphicon glyphicon-menu-down"></span></button>
                             </div>
                             {{track.votes}}
