--- a/web/index.html
+++ b/web/index.html
@@ -73,10 +73,10 @@
                 <ul class="list-group scrollable">
                     <li ng-repeat="track in library | filter:q as results" class="list-group-item">
                         <div class="row">
-                            <div class="col-md-6">{{track.title}} - {{track.artist}}</div>
-                            <div class="col-md-6">
+                            <div class="col-md-10">{{track.title}} - {{track.artist}}</div>
+                            <div class="col-md-2">
                                 <span class="pull-right">
-                                    <button id="add" ng-click="" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button>
+                                    <button id="add" ng-click="" class="btn btn-default-xs"><span class="glyphicon glyphicon-plus"></span></button>
                                 </span>
                             </div>
                             </div>
