--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
             <h3>Play Queue</h3>
 
             <ul class="list-group">
-                <li ng-repeat="track in queue" class="list-group-item">
+                <li ng-repeat="track in client_getQueuePage()" class="list-group-item">
                     <div class="row">
                         <div class="col-md-6">{{track.title}} - {{track.artist}}</div>
                         <div class="col-md-6">
@@ -60,6 +60,18 @@
                     </div>
                 </li>
             </ul>
+            <div class="row">
+                <div class="col-md-6">
+                    <button id="queue_back" ng-click="client_advanceQueuePage('left')"
+                        ng-if="queue_page_start - 10 < 0" type="button" class="btn btn-default">
+                        <span class="glyphicon glyphicon-menu-left"></span></button>
+                </div>
+                <div class="col-md-6"><span class="pull-right">
+                    <button id="queue_next" ng-click="client_advanceQueuePage('right')"
+                        ng-if="queue_page_start + 10 > queue_page_start + queue_page_start % 10" type="button" class="btn btn-default">
+                        <span class="glyphicon glyphicon-menu-right"></span><button></button>
+                </div></span>
+            </div>
             </div>
 
             <div class="col-md-4">
