--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
             <h3>Play Queue</h3>
 
             <ul class="list-group">
-                <li ng-repeat="track in client_getQueuePage()" class="list-group-item">
+                <li ng-repeat="track in queue_page" class="list-group-item">
                     <div class="row">
                         <div class="col-md-6">{{track.title}} - {{track.artist}}</div>
                         <div class="col-md-6">
@@ -69,7 +69,7 @@
                 <div class="col-md-6"><span class="pull-right">
                     <button id="queue_next" ng-click="client_advanceQueuePage('right')"
                         ng-if="queue_page_start + 10 > queue_page_start + queue_page_start % 10" type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-menu-right"></span><button></button>
+                        <span class="glyphicon glyphicon-menu-right"></span></button>
                 </div></span>
             </div>
             </div>
