--- a/web/index.html
+++ b/web/index.html
@@ -16,17 +16,17 @@
     <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
-    <!-- Angular Route -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-route.min.js"></script>
-
     <!-- Angular Cookies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-cookies.min.js"></script>
 
+    <!-- Angular InfiniteScroll -->
+    <script src="js/ng-infinite-scroll.min.js"
+
     <!-- App JS -->
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="css/app.css">
 
     </head>
 
