--- a/web/index.html
+++ b/web/index.html
@@ -14,13 +14,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <!-- Angular -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
 
     <!-- Angular Cookies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-cookies.min.js"></script>
 
-    <!-- Angular InfiniteScroll -->
-    <script src="js/ng-infinite-scroll.min.js"
+    <!-- Angular Infinite Scroll -->
+    <script src="js/ng-infinite-scroll.min.js"></script>
 
     <!-- App JS -->
     <script src="js/app.js"></script>
@@ -62,12 +62,12 @@
             </ul>
             <div class="row">
                 <div class="col-md-6">
-                    <button id="queue_back" ng-click="client_moveQueuePage(-10)"
+                    <button id="queue_back" ng-click="client_moveQueuePage(queue_page_length * -1)"
                         ng-if="client_queueCanMoveBack()" type="button" class="btn btn-default">
                         <span class="glyphicon glyphicon-menu-left"></span></button>
                 </div>
                 <div class="col-md-6"><span class="pull-right">
-                    <button id="queue_next" ng-click="client_moveQueuePage(10)"
+                    <button id="queue_next" ng-click="client_moveQueuePage(queue_page_length)"
                         ng-if="client_queueCanMoveForward()" type="button" class="btn btn-default">
                         <span class="glyphicon glyphicon-menu-right"></span></button>
                 </div></span>
@@ -82,8 +82,9 @@
                 </div>
                 </h3>
 
-                <ul class="list-group scrollable">
-                    <li ng-repeat="track in library | filter:q as results" class="list-group-item">
+                <ul class="list-group scrollable"> 
+                    <div infiniteScrollParent="true" infiniteScroll="client_loadSearch(q)" infiniteScrollDistance=0>
+                    <li ng-repeat="track in search" class="list-group-item">
                         <div class="row">
                             <div class="col-md-10">{{track.title}} - {{track.artist}}</div>
                             <div class="col-md-2">
@@ -94,6 +95,7 @@
                             </div>
                         </div>
                     </li>
+                    </div>
                 </ul>
             </div>
             </div>
