--- a/web/index.html
+++ b/web/index.html
@@ -76,10 +76,10 @@
 
             <div class="col-md-4">
                 <h3>
-                <div class="input-group">
+                <form ng-submit="client_loadSearch(q)" class="input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                     <input type="text" ng-model="q" class="form-control" placeholder="Search Library">
-                </div>
+                </form>
                 </h3>
 
                 <ul class="list-group scrollable"> 
