--- a/web/index.html
+++ b/web/index.html
@@ -76,14 +76,14 @@
 
             <div class="col-md-4">
                 <h3>
-                <form ng-submit="client_loadSearch(q)" class="input-group">
+                <form ng-submit="server_search(q)" class="input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                     <input type="text" ng-model="q" class="form-control" placeholder="Search Library">
                 </form>
                 </h3>
 
                 <ul class="list-group scrollable"> 
-                    <div infiniteScrollParent="true" infiniteScroll="client_loadSearch(q)" infiniteScrollDistance=0>
+                    <div infiniteScrollParent="true" infiniteScroll="client_loadMore(q)" infiniteScrollDistance=0>
                     <li ng-repeat="track in search" class="list-group-item">
                         <div class="row">
                             <div class="col-md-10">{{track.title}} - {{track.artist}}</div>
