--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,8 @@
 <html ng-app="DJayyApp">
     <head>
 
-     <meta charset="UTF-8"> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
