--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular-cookies.min.js"></script>
 
     <!-- Angular Infinite Scroll -->
-    <script src="js/ng-infinite-scroll.min.js"></script>
+    <script src="js/ng-infinite-scroll.js"></script>
 
     <!-- App JS -->
     <script src="js/app.js"></script>
@@ -84,8 +84,8 @@
                 </form>
                 </h3>
 
-                <ul class="list-group scrollable"> 
-                    <div infiniteScrollParent="true" infiniteScroll="client_loadMore(q)" infiniteScrollDistance=0>
+                <ul class="list-group scrollable" id="inf-scroll"> 
+                    <div infinite-scroll-container="'#inf-scroll" infinite-scroll="client_loadMore(q)">
                     <li ng-repeat="track in search" class="list-group-item">
                         <div class="row">
                             <div class="col-md-10">{{track.title}} - {{track.artist}}</div>
