--- a/web/index.html
+++ b/web/index.html
@@ -86,7 +86,7 @@
                 </h3>
 
                 <ul class="list-group scrollable" id="inf-scroll"> 
-                    <div infinite-scroll-container="'#inf-scroll" infinite-scroll="client_loadMore(q)">
+                    <div infinite-scroll-container="'#inf-scroll'" infinite-scroll="client_loadMore(q)">
                     <li ng-repeat="track in search" class="list-group-item">
                         <div class="row">
                             <div class="col-md-10">{{track.title}} - {{track.artist}}</div>
