--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
         <div class="container">
         <div class="row">
             <div class="wrapper">
-                <h1 ng-if="client_nowPlaying()"><img ng-src="{{album_src}}"></img></h1>
+                <h1 ng-if="nowplaying.track.titl"><img ng-src="{{album_src}}"></img></h1>
             <div class="col-md-8">
             <h2>Play Queue</h2>
 
