--- a/web/index.html
+++ b/web/index.html
@@ -40,10 +40,12 @@
 
         <div class="container">
         <div class="row">
+            <div class="col-md-8">
             <div class="wrapper">
                 <h1 class="text-center" ng-if="nowplaying.artist"><img ng-src="{{album_src}}">
                     <div style="postion: relative;">{{nowplaying.title}} - {{nowplaying.artist}}</div></img></h1>
-            <div class="col-md-8">
+            </div>
+            <div ng-if="nowplaying.artist"><br><br></div>
             <h2>Play Queue</h2>
 
             <ul class="list-group">
