--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col-md-8">
             <div class="wrapper">
-                <h1 class="text-center" ng-if="nowplaying.artist"><img ng-src="{{album_src}}">
+                <h1 class="text-center" ng-if="nowplaying.artist"><img class=".albumart" ng-src="{{album_src}}">
                     <div style="postion: relative;">{{nowplaying.title}} - {{nowplaying.artist}}</div></img></h1>
             </div>
             <div ng-if="nowplaying.artist"><br><br></div>
