--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
             <div class="col-md-8">
             <div class="wrapper">
                 <h1 class="text-center" ng-if="nowplaying.artist"><img class="albumart" ng-src="{{album_src}}">
-                    <div style="postion: relative;">{{nowplaying.title}} - {{nowplaying.artist}}</div></img></h1>
+                    <div style="postion: relative;"><span class="nowplaying_title">{{nowplaying.title}}</span><br/><span class="nowplaying_subtitle">{{nowplaying.artist}} - {{nowplaying.album}}</span></div></img></h1>
             </div>
             <div ng-if="nowplaying.artist"><br><br></div>
             <h2>Play Queue</h2>
@@ -92,7 +92,7 @@
                     <div infinite-scroll-container="'#inf-scroll'" infinite-scroll="client_loadMore(q)">
                     <li ng-repeat="track in search" class="list-group-item">
                         <div class="row">
-                            <div class="col-md-10">{{track.title}} - {{track.artist}}</div>
+                            <div class="col-md-10"><strong>{{track.title}}</strong><br/>{{track.artist}} - {{track.album}}</div>
                             <div class="col-md-2">
                                 <span class="pull-right">
                                     <button id="add" ng-click="server_addToQueue(track)" class="btn btn-default-xs">
